# staircase

./: .codacy.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  feature_request.md
.github/workflows/: ci.yml  pre-commit.yml  publish-pypi.yml  publish-test-pypi.yml  test-master.yml
conda.recipe/: meta.yaml
docs/: Stairs.rst  api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst  install.rst  module_funcs.rst  multi_stair.rst  readme.rst  requirements.txt  requirements_general.txt  resources.rst  test_doc_links.py
docs/_static/: custom.css
docs/_templates/: gumroad.html  logo.html  relations.html
docs/articles/: timezones.ipynb
docs/case_studies/: dataleakage.rst  index.rst  intervals.rst  queues.rst  utilisation.rst
docs/development/: index.rst
docs/development/guide/: code.rst  documentation.rst  environment.rst  internals.rst
docs/examples/: Case Study Asset Utilisation TZ.ipynb  Case Study Asset Utilisation.ipynb  Case Study Hotel Stays  Case Study Hotel Stays.ipynb  Case Study Maintenance Schedule.ipynb  Case Study Queue Analysis.ipynb  Case Study State Machine.ipynb  Index.ipynb  Staircase Basics.ipynb
docs/examples/data/: asset_use.csv  hotel_stays.csv  maintenance_schedule.csv  page_views.csv  state_machine.csv
docs/getting_started/: index.rst  overview.rst
docs/getting_started/intro_tutorials/: 00_stepfunction.rst  01_domains.rst  02_creating.rst  03_plotting.rst  04_combining.rst  05_comparing.rst  06_stats.rst  07_next.rst  index.rst  notstepfunctionplot.txt  stepfunctionplot.txt
docs/img/: def.tex
docs/reference/: Stairs.rst  StairsAccessor.rst  StairsArray.rst  StairsSlicer.rst  arrays.rst  index.rst  misc.rst
docs/release_notes/: changelog.rst  index.rst  v1_v2_dates.ipynb  v1_v2_floats.ipynb  versiontwo.rst
docs/resources/: index.rst
docs/resources/articles/: timezones.ipynb
docs/resources/examples/: Case Study Asset Utilisation TZ.ipynb  Case Study Asset Utilisation.ipynb  Case Study Hotel Stays.ipynb  Case Study Queue Analysis.ipynb  Case Study State Machine.ipynb  Index.ipynb  Staircase Basics.ipynb
docs/resources/examples/data/: EuroLeagueGoals2016.csv  call_centre.csv  vessel_queue.csv
docs/user_guide/: arraymethods.rst  cookbook.rst  dates.rst  distributions.rst  endpoints.rst  faq.rst  gotchas.rst  index.rst  layering.rst  masking.rst  slicing.rst  stepfunctionthinking.rst  test_data.rst
staircase/: __init__.py  _typing.py  _version.py  constants.py  defaults.py  stairs.py  test_data.py
staircase/core/: accessor.py  aggregation.py  layering.py  resampling.py  sampling.py  slicing.py  stairs.py
staircase/core/arrays/: __init__.py  accessor.py  aggregation.py  docstrings.py  extension.py  transform.py
staircase/core/collections/: docstrings.py  functions.py
staircase/core/exceptions/: __init__.py
staircase/core/ops/: __init__.py  arithmetic.py  common.py  docstrings.py  logical.py  masking.py  relational.py  rops.py
staircase/core/poly/: __init__.py  docstrings.py  methods.py
staircase/core/stats/: __init__.py  distribution.py  docstrings.py  statistic.py
staircase/core/tools/: __init__.py  datetimes.py
staircase/docstrings/: __init__.py  decorator.py  examples.py  slicing.py  stairs_class.py  stairs_module.py
staircase/plotting/: __init__.py  accessor.py  docstrings.py  matplotlib.py
staircase/util/: __init__.py  _decorators.py
tests/: test_exceptions.py  test_extension_array.py  test_misc.py  test_staircase.py  test_stairs.py  test_stairs_arrays.py  test_stairs_arrays_dates.py  test_stairs_dates.py  test_stairs_module.py  test_stairs_module_dates.py
tests/test_dates/: test_dates_arithmetic.py  test_dates_arrays.py  test_dates_distribution.py  test_dates_logical.py  test_dates_misc.py  test_dates_relational.py  test_dates_sample.py  test_dates_slicing.py  test_dates_stats.py
tests/test_floats/: test_floats_arithmetic.py  test_floats_arrays.py  test_floats_construction.py  test_floats_distribution.py  test_floats_logical.py  test_floats_misc.py  test_floats_relational.py  test_floats_sample.py  test_floats_slicing.py  test_floats_stats.py
tests/test_masking/: test_fillna.py  test_mask.py  test_masking_addition.py  test_masking_and.py  test_masking_arrays.py  test_masking_arrays_dates.py  test_masking_boolean.py  test_masking_division.py  test_masking_eq.py  test_masking_ge.py  test_masking_gt.py  test_masking_le.py  test_masking_lt.py  test_masking_mean_integrate.py  test_masking_multiplication.py  test_masking_ne.py  test_masking_or.py  test_masking_subtraction.py  test_masking_xor.py  test_where.py
