# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "staircase"
version = "2.6.0"
description = "A data analysis package based on modelling and manipulation of mathematical step functions. Strongly aligned with pandas."
readme = "README.md"
authors = ["Riley Clement <venaturum@gmail.com>"]
maintainers = ["Riley Clement <venaturum@gmail.com>"]
license = "MIT"
repository = "https://github.com/staircase-dev/staircase"
homepage = "https://staircase.dev"
documentation = "https://staircase.dev"

keywords=[
	'Staircase',
	'Step Functions',
	'Mathematics', 
	'Data Analysis',
	'Analysis',
	'Data Structures',
	'Time Signal',
	'Simulation Output',
]

classifiers=[
	'Operating System :: OS Independent',
	'Intended Audience :: Science/Research',
	'Programming Language :: Python :: 3.8',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
	'Topic :: Scientific/Engineering',
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/staircase-dev/staircase/issues"


[tool.poetry.dependencies]
python = "^3.8"
pytz = "*"
typing-extensions = "^4.4.0"

[[tool.poetry.dependencies.pandas]]
python = ">=3.8,<3.10"
version = "^1"

[[tool.poetry.dependencies.pandas]]
python = "^3.10"
version = ">=1.3.4,<3"

[[tool.poetry.dependencies.numpy]]
python = ">=3.8,<3.10"
version = "^1.16"

[[tool.poetry.dependencies.numpy]]
python = "^3.10"
version = "^1.21.2"

[[tool.poetry.dependencies.matplotlib]]
python = ">=3.8,<3.11"
version = ">=2"

[[tool.poetry.dependencies.matplotlib]]
python = "^3.11"
version = "^3.6"


[tool.poetry.dev-dependencies]
ipykernel = "^6"
pytest = "^6"
pytest-cov = "*"
sphinx = "*"
nbsphinx = ">=0.8.5"
sphinx-autobuild = "*"
seaborn = ">=0.8.0"
notebook = ">= 6.0"
isort = ">=5.8,<5.12"
black = ">=22.10"
flake8 = ">=5"
pre-commit = ">=2.20"
tox=">=3.15"
mypy = "^0.982"

[tool.poetry.extras]
codecov = ["codecov"]

[tool.black]
line-length=88

[tool.mypy]
# disallow_untyped_defs='true'
# disallow_incomplete_defs='true'
# no_implicit_optional='true'
exclude = [
    '^docs/.',
	'^core/ops.',
	'docstrings\\.pyi$',
	'^tests/.',
	'^staircase/plotting.',
]

[[tool.mypy.overrides]]
module=[
    'matplotlib.*',
    'pandas.*',
]
ignore_missing_imports='true'

[tool.isort]
# make it compatible with black
profile = "black"
multi_line_output = 3
src_paths = ["staircase", "tests"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = """
    --junitxml=junit.xml
    --ignore setup.py
    --ignore run_test.py
    --cov-report term-missing
    --tb native
    --strict-markers
    --durations=20
	"""
markers = "serial: execute test serially (to avoid race conditions)"
junit_family = "xunit1"
